mdapipkg/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Inventory__c</fullName>
        <label>Current Inventory</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lifespan_Months__c</fullName>
        <label>Lifespan Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maintenance_Cycle__c</fullName>
        <description>Number of days required before routine maintenance is needed</description>
        <label>Maintenance Cycle (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Replacement_Part__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Replacement Part</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Warehouse_SKU__c</fullName>
        <externalId>true</externalId>
        <label>Warehouse SKU</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Maintenance_Cycle__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Equipments</label>
    </listViews>
</CustomObject>